# ApiUrls

./: README.md  __init__.py  api_urls.py  pyproject.toml
.github/workflows/: python-package.yml
src/apiurls/: api_urls.py  sub_directories.py
tests/: __init__.py  test_api_urls.py  test_api_urls_attrs.py  test_new_api_urls_mixin.py
