[tool.poetry]
name = "apiurls"
version = "0.1.2"
description = "APIのURLを格納するクラスを作成するミックスイン"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
repository = "https://github.com/OrangeJuice652/ApiUrls"
packages = [
    { include = "apiurls" },
]

[tool.poetry.dependencies]
python = "^3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
