[tool.poetry]
name = "apiurls"
version = "0.2.3a1"
description = "APIのURLを格納するクラスを作成するミックスイン"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
repository = "https://github.com/OrangeJuice652/ApiUrls"
include = [{ path = "tests", format = "sdist" }]

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
